# critterai

./: .gitignore
src/: CMakeLists.txt
src/nav-rcn/: CMakeLists.txt
src/nmgen-rcn/: CMakeLists.txt
